# analyzetg

./: .env.bot.example  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bot  LICENSE  README.md  ROADMAP.md  SECURITY.md  config.toml.example  docker-compose.bot.prod.yml  docker-compose.bot.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/examples/: summary.md
.github/workflows/: bot-image.yml  ci.yml  deploy-site.yml  image.yml  release.yml
analyzetg/: __init__.py  cli.py  config.py  i18n.py  interactive.py  models.py  runner.py
analyzetg/analyzer/: chunker.py  commands.py  filters.py  formatter.py  hasher.py  openai_client.py  pipeline.py  prompts.py
analyzetg/ask/: __init__.py  commands.py  embeddings.py  rerank.py  retrieval.py
analyzetg/core/: __init__.py  paths.py  pipeline.py  run.py
analyzetg/db/: __init__.py  repo.py  schema.sql
analyzetg/enrich/: __init__.py  audio.py  base.py  document.py  image.py  link.py  pipeline.py  video.py
analyzetg/export/: commands.py  markdown.py
analyzetg/media/: __init__.py  commands.py  download.py  transcribe.py
analyzetg/settings/: __init__.py  commands.py
analyzetg/tg/: __init__.py  client.py  commands.py  dialogs.py  folders.py  links.py  resolver.py  sync.py  topics.py
analyzetg/util/: __init__.py  flood.py  logging.py  pricing.py
analyzetg/youtube/: __init__.py  commands.py  metadata.py  paths.py  transcript.py  urls.py
assets/: BRAND.md  render.py
assets/terminal/: banner.py
atg/: __init__.py  cli.py  config.py  i18n.py  interactive.py  models.py  runner.py
atg/analyzer/: chunker.py  commands.py  filters.py  formatter.py  openai_client.py  pipeline.py  prompts.py
atg/ask/: __init__.py  commands.py  embeddings.py  rerank.py  retrieval.py
atg/core/: pipeline.py  run.py
atg/db/: repo.py  schema.sql
atg/enrich/: __init__.py  audio.py  document.py  image.py  link.py  pipeline.py  video.py
atg/export/: __init__.py  commands.py  markdown.py
atg/media/: commands.py  download.py
atg/settings/: __init__.py  commands.py
atg/tg/: client.py  commands.py  dialogs.py  folders.py  links.py  resolver.py  sync.py  topics.py
atg/util/: flood.py  pricing.py  tokens.py
atg/website/: __init__.py  commands.py  content.py  metadata.py  paths.py
atg/youtube/: commands.py  metadata.py  paths.py  transcript.py
docs/: bot-vm-deploy.md  bot.md  configuration.md  install.md  reference.md  security.md  sources.md
presets/: README.md  _base.md  _reduce.md  action_items.md  broad.md  decisions.md  digest.md  highlights.md  links.md  multichat.md  questions.md  quotes.md  reactions.md  single_msg.md  summary.md
presets/en/: _base.md  _reduce.md  action_items.md  broad.md  decisions.md  digest.md  highlights.md  links.md  multichat.md  questions.md  quotes.md  reactions.md  single_msg.md  summary.md  tldr.md  video.md  website.md
presets/ru/: _base.md  _reduce.md  action_items.md  broad.md  decisions.md  digest.md  highlights.md  links.md  multichat.md  questions.md  quotes.md  reactions.md  single_msg.md  summary.md  tldr.md  video.md  website.md
scripts/: deploy-bot.sh  install-bot.sh  sync_version.py
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/public/: robots.txt
site/src/: consts.ts  faqData.ts
tests/: conftest.py  test_aead_v2_envelope.py  test_ai_providers.py  test_analysis_cache_keys.py  test_anthropic_adapter.py  test_app_settings.py  test_ask_cfg_cutoff.py  test_ask_dispatch_routing.py  test_ask_doc_orchestrator.py  test_ask_doc_question_prompt.py  test_ask_enrich.py  test_ask_followup_prompt.py  test_ask_global_flag.py  test_ask_mark_read.py  test_ask_mutual_exclusion.py  test_ask_no_tg.py  test_ask_ref_resolution.py  test_ask_wizard_dispatch.py  test_backfill_since_cache.py  test_bot_config.py  test_bot_confirm.py  test_bot_dispatcher.py  test_bot_extract.py  test_bot_progress.py  test_bot_reply.py  test_bot_runtime.py  test_bot_session_upload.py  test_bug_report.py  test_chat_picker_layout.py  test_chunker.py  test_cli_argv.py  test_cli_error_quiet.py  test_cli_helpers.py  test_cli_watch_async.py  test_completion.py  test_content_language_semantics.py  test_core_paths.py  test_credential_gating.py  test_crypto_v1_v2_migration.py  test_csv_formula_injection.py  (+147 more)
tests/e2e/: test_smoke_local.py
tests/fixtures/: sample.txt
unread/: __init__.py  cli.py  config.py  diagnostics.py  i18n.py  interactive.py  killme.py  models.py  runner.py  secrets.py  secrets_backend.py  update.py
unread/ai/: __init__.py  anthropic_provider.py  google_provider.py  model_listing.py  models.py  openai_provider.py  prompt.py  providers.py  trust.py  vision_provider.py
unread/analyzer/: __init__.py  chunker.py  commands.py  filters.py  formatter.py  hasher.py  openai_client.py  pipeline.py  prompts.py  redact.py
unread/ask/: __init__.py  commands.py  embeddings.py  render.py  rerank.py  retrieval.py
unread/bot/: __init__.py  _pdf_worker.py  app.py  burst.py  combined.py  commands.py  confirm.py  dispatcher.py  extract.py  pdf.py  progress.py  reply.py  runtime.py  session_upload.py
unread/completion/: __init__.py  commands.py
unread/core/: paths.py  pipeline.py  run.py
unread/db/: _keys.py  repo.py  schema.sql
unread/dump/: __init__.py  prompts.py
unread/enrich/: __init__.py  audio.py  document.py  image.py  link.py  pipeline.py  video.py
unread/export/: commands.py  markdown.py
unread/files/: __init__.py  commands.py  dump.py  extractors.py  paths.py
unread/media/: commands.py  download.py
unread/security/: __init__.py  commands.py  crypto.py  passphrase.py
unread/settings/: __init__.py  commands.py
unread/tg/: client.py  commands.py  dialogs.py  folders.py  links.py  resolver.py  session_state.py  sync.py  topics.py
unread/util/: banner.py  flood.py  fsmode.py  languages.py  logging.py  preflight.py  pricing.py  prompt.py  report_render.py  safe_fetch.py  subprocess_env.py  tokens.py
(+62 files in other folders)
