[project]
name = "atg"
version = "0.1.0"
description = "Local CLI for pulling Telegram chats and channels, transcribing voice/video via OpenAI, and analyzing with Chat Completions."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Max Bolgarin", email = "mxbolgarin@gmail.com" }]
dependencies = [
    "typer>=0.12",
    "telethon>=1.36",
    "openai>=1.50",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiosqlite>=0.20",
    "tiktoken>=0.7",
    "rapidfuzz>=3.9",
    "tenacity>=8.5",
    "structlog>=24.1",
    "rich>=13.7",
    "python-dateutil>=2.9",
    "questionary>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "yt-dlp>=2024.7",
    "trafilatura>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
atg = "atg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atg"]

[tool.hatch.build.targets.wheel.force-include]
"atg/db/schema.sql" = "atg/db/schema.sql"
"presets" = "presets"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PL", "RUF"]
# Intentional:
# - RUF001/RUF002: Russian UX strings contain em-dashes and multiplication sign; spec §9.5
# - PLC0415: lazy imports in CLI stubs keep --help fast (Typer startup)
# - PLW0603: config singleton uses module-level global by design
# - B008: typer.Option(...) in function defaults is idiomatic Typer
# - E501: long lines in SQL strings and log messages
# - PLR09xx: complexity checks — we prefer flat functions here
ignore = [
    "PLR0913", "PLR0911", "PLR2004", "PLR0912", "PLR0915",
    "E501", "RUF001", "RUF002", "PLC0415", "PLW0603", "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "B011"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
