[project]
name = "unread"
version = "0.2.0"
description = "Local CLI for pulling Telegram chats and channels, transcribing voice/video via OpenAI, and analyzing with Chat Completions."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Max Bolgarin", email = "mxbolgarin@gmail.com" }]
keywords = [
    "telegram",
    "cli",
    "ai",
    "openai",
    "anthropic",
    "google",
    "summarize",
    "digest",
    "transcription",
    "whisper",
    "youtube",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    # Click 9 changed `Context._protected_args` from a private attribute
    # to a property; `_PreferSubcommandsGroup` in cli.py still writes
    # to the underscore name. Pin <9 until that interaction is updated
    # and validated end-to-end.
    "click<9",
    "telethon>=1.36",
    "openai>=1.50",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "aiosqlite>=0.20",
    "tiktoken>=0.7",
    "rapidfuzz>=3.9",
    "tenacity>=8.5",
    "structlog>=24.1",
    "rich>=13.7",
    "python-dateutil>=2.9",
    "questionary>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "yt-dlp>=2024.7",
    "trafilatura>=1.12",
    # Alternative chat-provider SDKs. Pulled in unconditionally because
    # any of the four providers can be the active one, and a missing
    # adapter import surfaces as a confusing error at runtime instead
    # of install time. Each SDK is small (no heavyweight extras).
    "anthropic>=0.40",
    "google-genai>=0.5",
    # OS-keychain access for the optional `keychain` secrets backend.
    # Pure-Python; degrades to a `Null` backend on hosts without a
    # native store (headless Linux without Secret Service running),
    # in which case `unread` silently keeps using the DB backend.
    "keyring>=24",
    # Passphrase-derived encryption for the optional `passphrase`
    # secrets backend (Scrypt + ChaCha20Poly1305 + encrypted Telethon
    # StringSession). Already a transitive dep of openai / anthropic
    # SDKs but pinned here so the encryption path doesn't suddenly
    # break if those drop the requirement.
    "cryptography>=42",
    # PEP 440 version comparison for `unread update`. Transitively
    # pulled by other deps but pinned here so the update path doesn't
    # silently break if the chain shifts.
    "packaging>=24",
    # Markdown → PDF rendering for `unread bot` so phone Telegram clients
    # (which don't preview .md) get a readable attachment. Now part of
    # the base install so `pip install unread` Just Works for both CLI
    # and bot uses. Requires the Pango system library at runtime
    # (Linux: `apt-get install libpango-1.0-0 libpangoft2-1.0-0`;
    #  macOS: `brew install pango`). When Pango is missing the bot
    # gracefully falls back to uploading the raw .md file — see
    # `unread/bot/pdf.py:is_available` and `bot.report_format` config.
    "weasyprint>=62",
    "markdown-it-py>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
# Legacy alias kept so `pip install 'unread[bot]'` still parses for
# anyone with that command in their install scripts. Bot-needed deps
# moved into the base install above — this slot is intentionally empty.
bot = []

[project.urls]
Homepage = "https://github.com/maxbolgarin/unread"
Repository = "https://github.com/maxbolgarin/unread"
Issues = "https://github.com/maxbolgarin/unread/issues"
Changelog = "https://github.com/maxbolgarin/unread/blob/main/CHANGELOG.md"

[project.scripts]
unread = "unread.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unread"]

[tool.hatch.build.targets.wheel.force-include]
"unread/db/schema.sql" = "unread/db/schema.sql"
"presets" = "presets"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "PL", "RUF"]
# Intentional:
# - RUF001/RUF002: Russian UX strings contain em-dashes and multiplication sign; spec §9.5
# - PLC0415: lazy imports in CLI stubs keep --help fast (Typer startup)
# - PLW0603: config singleton uses module-level global by design
# - B008: typer.Option(...) in function defaults is idiomatic Typer
# - E501: long lines in SQL strings and log messages
# - PLR09xx: complexity checks — we prefer flat functions here
ignore = [
    "PLR0913", "PLR0911", "PLR2004", "PLR0912", "PLR0915",
    "E501", "RUF001", "RUF002", "PLC0415", "PLW0603", "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "B011"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
